Link main.css and main.js to index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
    <head>
       <meta charset="utf-8">
       <title>Front-End Coding Assessment</title>
+      <link rel="stylesheet" href="styles/main.css">
    </head>
    <body>
-      
+      <div id="content"></div>
+      <script src="scripts/main.js"></script>
    </body>
 </html>
