--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
    <head>
       <meta charset="utf-8">
       <title>Front-End Coding Assessment</title>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="styles/main.css">
    </head>
    <body>
